--- a/macOS/Info.plist
+++ b/macOS/Info.plist
@@ -12,14 +12,14 @@
 			<key>CFBundleTypeIconFile</key>
 			<string>ari</string>
 			<key>CFBundleTypeName</key>
-			<string>Ari project</string>
+			<string>Ari website</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>LSHandlerRank</key>
 			<string>Owner</string>
 			<key>LSItemContentTypes</key>
 			<array>
-				<string>ari.app.project</string>
+				<string>ari.app.website</string>
 			</array>
 		</dict>
 	</array>
@@ -57,11 +57,11 @@
 				<string>public.data</string>
 			</array>
 			<key>UTTypeDescription</key>
-			<string>Ari project</string>
+			<string>Ari website</string>
 			<key>UTTypeIconFile</key>
 			<string>ari</string>
 			<key>UTTypeIdentifier</key>
-			<string>ari.app.project</string>
+			<string>ari.app.website</string>
 			<key>UTTypeTagSpecification</key>
 			<dict>
 				<key>public.filename-extension</key>
