Add document types

--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -4,6 +4,28 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeIconFiles</key>
+			<array>
+				<string>icon_22x28.png</string>
+				<string>icon_44x58.png</string>
+				<string>icon_64x64.png</string>
+				<string>icon_320x320.png</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Ari website</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Owner</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>ari.website</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -56,6 +78,33 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Ari website</string>
+			<key>UTTypeIconFiles</key>
+			<array>
+				<string>icon_22x28.png</string>
+				<string>icon_44x58.png</string>
+				<string>icon_64x64.png</string>
+				<string>icon_320x320.png</string>
+			</array>
+			<key>UTTypeIdentifier</key>
+			<string>ari.website</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>ari</string>
+				</array>
+			</dict>
+		</dict>
 	</array>
 </dict>
 </plist>
