--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -42,6 +42,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Save selected images to photo library</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Select images for adding them to project</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
