--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -42,6 +42,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Select images for adding them to your projects</string>
 	<key>UIApplicationSceneManifest</key>
